--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
 
             <dependency>
                 <groupId>${project.parent.groupId}</groupId>
+                <artifactId>origin-service-admin</artifactId>
+                <version>${project.parent.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>${project.parent.groupId}</groupId>
                 <artifactId>origin-service-client-dependencies</artifactId>
                 <version>${project.parent.version}</version>
                 <type>pom</type>
