--- a/origin-service-admin/pom.xml
+++ b/origin-service-admin/pom.xml
@@ -16,7 +16,10 @@
     <description>基础信息-启动类</description>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+        </dependency>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
             <artifactId>origin-admin-info</artifactId>
@@ -41,12 +44,6 @@
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
             <artifactId>origin-service-cloud-client</artifactId>
-        </dependency>
-
-        <!-- Swagger操作 -->
-        <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>origin-swagger-spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
